--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
 name = dalec-caldav
 version = attr: dalec_caldav.__version__
-url = https://dev.webu.coop/w/i/dalec-caldav
+url = https://github.com/webu/dalec-caldav
 author = Webu
 author_email = contact@webu.coop
 description = Dalec plugin to retrieve caldav data
 long_description = file: README.md
 license = BSD-3-Clause
 classifiers =
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 5 - Production/Stable
     Environment :: Web Environment
     Framework :: Django
     Intended Audience :: Developers
@@ -21,8 +21,8 @@ classifiers =
     Topic :: Software Development :: Libraries :: Application Frameworks
     Topic :: Software Development :: Libraries :: Python Modules
 project_urls =
-    Source = https://dev.webu.coop/w/i/dalec-caldav
-    Tracker = https://dev.webu.coop/w/i/dalec-caldav/issues
+    Source = https://github.com/webu/dalec-caldav
+    Tracker = https://github.com/webu/dalec-caldav/issues
 
 [options]
 python_requires = >=3.7
@@ -31,5 +31,5 @@ include_package_data = true
 zip_safe = false
 install_requires =
     Django>=2.2
-    dalec @ git+https://dev.webu.coop/w/i/dalec.git@main#egg=dalec
+    dalec
     caldav
