add tests, tox config, and better item template

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,3 +34,38 @@ install_requires =
     Django>=2.2
     dalec
     caldav
+
+[options.extras_require]
+testing =
+    requests
+    beautifulsoup4
+    coverage>=3.7.0
+    black
+    flake8
+    mypy
+    types-requests
+    radicale
+
+[flake8]
+exclude = build,.git,.tox,./tests/.env,venv
+max-line-length = 99
+
+[isort]
+combine_as_imports = true
+default_section = THIRDPARTY
+include_trailing_comma = true
+known_first_party = dalec
+line_length = 99
+multi_line_output = 5
+
+[mypy]
+ignore_missing_imports = True
+warn_unused_configs = True
+disallow_untyped_calls = True
+disallow_untyped_defs = True
+disallow_incomplete_defs = True
+check_untyped_defs = True
+no_implicit_optional = True
+warn_redundant_casts = True
+no_implicit_reexport = True
+strict_equality = True
