--- a/tbump.toml
+++ b/tbump.toml
@@ -53,8 +53,8 @@ src = "dalec_caldav/__init__.py"
 # and before the git commit is made
 
  [[before_commit]]
- name = "check black"
- cmd = "black ./"
+ name = "run tests"
+ cmd = "tox -e py39-django22,py39-django32,py39-django42,qa"
 
 # Or run some commands after the git tag and the branch
 # have been pushed:
