--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ author = Webu
 author_email = contact@webu.coop
 description = Dalec plugin to retrieve caldav data
 long_description = file: README.md
+long_description_content_type = text/markdown
 license = BSD-3-Clause
 classifiers =
     Development Status :: 5 - Production/Stable
