improve tests and add start/end limits

--- a/.radicale/collection-root/test/7eb24728-09c0-3977-4fca-e7bec231f7a0/.Radicale.props
+++ b/.radicale/collection-root/test/7eb24728-09c0-3977-4fca-e7bec231f7a0/.Radicale.props
@@ -1,1 +1,1 @@
-{"C:calendar-description": "Test calendar for dalec-caldav", "D:displayname": "7eb24728-09c0-3977-4fca-e7bec231f7a0", "tag": "VCALENDAR"}
+{"C:calendar-description": "Test calendar for dalec-caldav", "D:displayname": "Primary", "tag": "VCALENDAR"}
