--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,6 +64,11 @@ jobs:
           pip install "${{ matrix.dalec }}"
           pip install -e .[testing]
           ${{ matrix.install_extras }}
+      - name: Write local_settings
+        run: |
+          echo "$LOCAL_SETTINGS_CONTENT" > ./tests/local_settings.py
+        env:
+          LOCAL_SETTINGS_CONTENT: ${{ vars.LOCAL_SETTINGS_CONTENT }}
       - name: Test
         run: |
           coverage run --parallel-mode ./runtests.py
